AppMapSidebar: fix location title shadows getting truncated

--- a/src/components/AppMapSidebar.less
+++ b/src/components/AppMapSidebar.less
@@ -118,8 +118,6 @@
   text-shadow: 0 0 20px #3aa0ff, 0 0 20px #3aa0ff, 0 0 20px #3aa0ff !important;
   margin-top: 10px;
   margin-bottom: 3px !important;
-  text-overflow: ellipsis;
-  overflow: hidden;
   white-space: nowrap;
   span {
     padding-bottom: 7px;
